# la_olap

./: .gitignore  CMakeLists.txt  makefile  olap_engine  olap_engine_generated_main.cu.o.cmake  olap_engine_generated_main.cu.o.depend  readme.md  references.txt
DOC/: algorithms.aux  algorithms.tex  linear_transformations.aux  linear_transformations.tex
DSL/: analisador_lexico.l  exemplo_linguagem.txt  grammar.y  language_example.la  lex.yy.c  lex_analyser.l  newGrammar.y  newLex_analyser.l  olap  test1.la  teste  timer.h  y.output  y.tab.c  y.tab.h
DSL/old/: grammar.y  lex_analyser.l  simple_lex.l
DSL/queries/: querie1.la  query1.java  query1.la
EPS_analise/: tpc-h-1_lineitem_1_15.eps  tpc-h-1_lineitem_1_2.eps  tpc-h-1_lineitem_1_9.eps  tpc-h-1_suppliers_1_2.eps  tpc-h-1_suppliers_1_3.eps  tpc-h-1_suppliers_1_4.eps  tpc-h-1_suppliers_1_5.eps  tpc-h-1_suppliers_1_6.eps
Report/: cpd_pi_olap.aux  cpd_pi_olap.bbl  cpd_pi_olap.blg  cpd_pi_olap.tex  references.bib
Roofline/: roofline.aux  roofline.tex
Stream_Benchmark/: .gitignore  .results.txt.swo  .results.txt.swp  results.txt  stream
TPC-H_2_17_0/dbgen/: Makefile  bm_utils.c  dbgen  dss.h  qgen  varsub.c
TPC-H_2_17_0/postgres_scripts/: import.txt
__sparsity_csv/: 1_2_suppliers.csv  1_3_suppliers.csv  1_4_suppliers.csv  1_5_suppliers.csv  1_6_suppliers.csv  File.eps  sparse_10.m  sparse_11.m  sparse_5.m  sparse_9.m  sparsity_10.eps  sparsity_11.eps  sparsity_5.eps  sparsity_9.eps
__sparsity_csv/export_fig-master/: test.m
app/: OLAP_NOVEC_32G.e396218  OLAP_NOVEC_32G.e396220  makefile  olap_search.optrpt
app/jobs/: job_seq_652_intel  job_sql_1_par  job_sql_1_seq  job_sql_2_par  job_sql_32_par  job_sql_4_seq
app/src/: querie1_search.c
app/timing_sql_par/: SQL_2G_PAR.o394863
base64testing/: 2_base64.csv  tokenizer.m
base64testing/eps/: tpc-h-1_lineitem_2_base64.eps
la_queries/: lineitem.tbl  load_data_q1.la  query1.la
matlab/: non_zeros_test.m
matlab/matrix_latex_dotproduct_option_analisys/: kronecker.m  matrix2latexmatrix.m
presentations/3rd/: time_la_ra.eps  time_la_ra_v2.eps
queries/: querie2_parallel_40.sql  querie32_seq.sql  querie4_seq.sql  querie8_seq.sql
queries/par/: .1.sql.swp  1.sql  16.sql  querie2_parallel_20.sql  querie32_parallel_20.sql  querie4_parallel_20.sql  querie8_parallel_20.sql
queries/seq/: .1.sql.swp  2.sql
ra_queries/seq/: 1.sql
report/: acknowledgements.tex  biblio.bib  conclusion.tex  cpd_pi_olap.aux  cpd_pi_olap.bbl  cpd_pi_olap.blg  future_work.tex  hardware.tex  introduction.tex  parallelization.tex  results.tex  schema_query_1.dot  sequential.tex  strategy.tex
report/eps/: TIME_LA_vs_RA_parallel.eps  TIME_LA_vs_RA_parallel_v2.eps  sparsity_10.eps  speedup.eps
report/matlab/: row9.m
report/sql/: simple_query_1.sql  simple_query_1_only_select.sql  tpch_query_1.sql  used_query_1.sql
report/src/: selection_new.c  selection_old.c
report/tables/: table_example.tex  table_quarks.tex  table_results_query_1.tex  table_results_simple_query_1.tex
src/: .mkl-lab-solution.c.swp  .olap.h.swp  .olap.optrpt.swp  .query1_no_mkl.c.swp  1_2_suppliers.csv  1_3_suppliers.csv  1_4_suppliers.csv  1_5_suppliers.csv  1_6_suppliers.csv  CMakeLists.txt  OLAP_NEW_32.e401982  OLAP_NEW_32.o401982  OLAP_NEW_32.o401987  OLAP_NOVEC_16G.e395602  OLAP_NOVEC_2G.e395596  OLAP_NOVEC_4G.e395598  OLAP_VEC_1G.e395593  OLAP_VEC_1G.e397667  OLAP_VEC_1G.e397668  OLAP_VEC_1G.o395593  OLAP_VEC_2G.e395595  OLAP_VEC_NEW.e397677  OLAP_VEC_NEW.e397869  OLAP_VEC_NEW.o397677  OLAP_VEC_NEW.o397869  OLAP_VEC_NEW_8.o397872  PGRES_TW_16G_PAR.o397663  PGRES_TW_16G_SEQ.o397657  PGRES_TW_1G_SEQ.o397652  PGRES_TW_2G_SEQ.o397654  PGRES_TW_32G_PAR.e397664  PGRES_TW_32G_SEQ.e397658  PGRES_TW_32G_SEQ.o397658  PGRES_TW_4G_SEQ.o397655  PGRES_TW_8G_PAR.e397662  PI_OLAP_SEQ.o394401  SQL_16G_PAR.o394866  SQL_1G_PAR.e397659  SQL_2G_PAR.e397660  SQL_32G_PAR.o394867  (+91 more)
src/Dstat/: cpu_usage.gawk  disk_usage.gawk  dstat.m  get_usage_stats.sh  memory_usage.gawk  net_usage.gawk  system_usage.gawk
src/InspectorOut/: InspectorOut.inspxe  inspxe-cl.txt
src/InspectorOutput_4gb_mi1/: InspectorOutput_4gb_mi1.inspxe  inspxe-cl.txt  open.infoinspxe
src/InspectorOutput_4gb_mi1_v2/: inspxe-cl.txt  open.infoinspxe  r000mi1.inspxe
src/InspectorOutput_8gb_mi1/: InspectorOutput_8gc_mi1.inspxe  inspxe-cl.txt  open.infoinspxe
src/InspectorOutput_8gb_mi2/: InspectorOutput_8gb_mi2.inspxe  inspxe-cl.txt  open.infoinspxe
src/InspectorOutput_8gb_mi3/: InspectorOutput_8gb_mi3.inspxe  inspxe-cl.txt  open.infoinspxe
src/VTuneOutput/: VTuneOutput.amplxe
src/__csv/: supplier.csv
src/__tbl_1/: nation.tbx
src/deprecated/: makefile_search  makeshell.sh  olap_osx.c  olap_version_10_may.c
src/dsl_queries/: query1.la
src/job_reports_olap/: OLAP_VEC_8G.e395600  PI_OLAP_SEQ_16G.e394434
src/job_reports_sql_seq/: OLAP_SQL_2G.e394585  OLAP_SQL_2G.e394587  OLAP_SQL_2G.o394585  OLAP_SQL_2G.o394587  OLAP_SQL_2G.o394598  OLAP_SQL_2G.o394608  OLAP_SQL_2G.o394611  SQL_8G_PAR.o395639
src/jobs/: OLAP_PAR_FULL.o402818  OLAP_PAR_FULL.o402823  (+39 more)
src/parser/: .olap_driver.cc.swp  .olap_driver.cu.swp  .olap_driver.hh.swp  CMakeList.txt  CMakeLists.txt  location.hh  olap_cube.cxx  olap_cube.hxx  olap_driver.cc  olap_driver.cu  olap_driver.hh  olap_engine.cc  olap_engine.cxx  olap_engine.hxx  olap_parser.yy  olap_scanner.cc  olap_scanner.hh  olap_scanner.ll  position.hh  stack.hh  tbl_parser.cu  tbl_parser.cuh
src_osx/: .query1_no_mkl.c.swp  dsl  grammar.tab.c  grammar.tab.h  grammar.y  lex.yy.c  lex_analyser.l  location.hh  main.cpp  makefile  olap.cpp  olap.hpp  olap_driver.cpp  olap_driver.hpp  olap_lexer.l  olap_lexer.yy.cc  olap_parser.output  olap_parser.tab.cc  olap_parser.tab.hh  olap_parser.yy  olap_scanner.hpp  olap_search.c  olap_search.cpp  olap_search.h  olap_search.hpp  position.hh  query1_no_mkl.c  stack.hh  y.output  y.tab.c  y.tab.h
windows_src/: ReadMe.txt  windows_src.c  windows_src.sln  windows_src.vcxproj  windows_src.vcxproj.filters
(+303 files in other folders)
